# rubiks-cube-cracker

./: .gitattributes  .svnignore  BUILDING.md  CMakeLists.txt  Makefile  README.linux  README.md  TODO  conditions.txt  corner_perms.txt
Controller/: BBSolver.h  ChromosomeGenerator.cpp  ChromosomeGenerator.h  CubeSearcher.cpp  CubeSearcher.h  IDDFSCubeSearcher.cpp  IDDFSCubeSearcher.h  RubiksCubeController.cpp  RubiksCubeController.h
Controller/Command/: CubeDumper.cpp  CubeDumper.h  CubeMover.cpp  CubeMover.h  CubeScrambler.cpp  CubeScrambler.h  CubeSolver.cpp  CubeSolver.h  KorfCubeSolver.cpp  KorfCubeSolver.h  ThistlethwaiteCubeSolver.cpp  ThistlethwaiteCubeSolver.h
Controller/Command/Solver/: CubeSolver.cpp  CubeSolver.h  KorfCubeSolver.cpp  KorfCubeSolver.h  ThistlethwaiteCubeSolver.cpp  ThistlethwaiteCubeSolver.h
Controller/GL/Program/: RubiksCubeProgram.h
Controller/Searcher/: BreadthFirstCubeSearcher.cpp  BreadthFirstCubeSearcher.h  CubeSearcher.cpp  CubeSearcher.h  GroupPatternDatabaseIndexer.cpp  GroupPatternDatabaseIndexer.h  GroupPatternDatabaseIndexer.prune.cpp  IDACubeSearcher.cpp  IDACubeSearcher.h  IDDFSCubeSearcher.cpp  IDDFSCubeSearcher.h  MovePruner.cpp  MovePruner.h  PatternDatabaseIndexer.cpp  PatternDatabaseIndexer.h
Data/: note.txt
Docker/: Dockerfile  build.sh  run-dev-env.sh
Model/: Chromosome.cpp  Chromosome.h  CubieHasher.h  ModelMoveStore.cpp  ModelMoveStore.h  MoveStore.cpp  MoveStore.h  RubiksCube.cpp  RubiksCube.h  RubiksCubeIndexModel.cpp  RubiksCubeIndexModel.h  RubiksCubeModel.cpp  RubiksCubeModel.h  RubiksCubeWorld.cpp  RubiksCubeWorld.h
Model/Goal/: DatabaseGoal.cpp  DatabaseGoal.h  Goal.cpp  Goal.h  Goal1.cpp  Goal1.h  Goal10.cpp  Goal10.h  Goal11.cpp  Goal11.h  Goal2.cpp  Goal2.h  Goal2_Layers_Minus_One_Corner_Edge.h  Goal2x2x2.cpp  Goal2x2x2.h  Goal2x2x2_1x1x2.cpp  Goal2x2x3.cpp  Goal2x2x3_1x1x2.cpp  Goal2x2x3_1x2x2.cpp  Goal2x2x3_Plus_One_Edge_Corner.cpp  Goal3.cpp  Goal3.h  Goal5.h  Goal6.cpp  Goal7.cpp  Goal7.h  Goal8.cpp  Goal8.h  Goal9.h  GoalG0_G1.h  GoalG1_G2.h  GoalG2_G3_Edges.h  GoalG3_Permute_Corners.cpp  Orient2x2x2.cpp  Orient2x2x3.cpp  Orient2x2x3_1x1x2.h  Orient2x2x3_1x2x2.cpp  Orient2x2x3_1x2x2.h  OrientGoal.cpp  OrientGoal.h  (+4 more)
Model/Goal/Korf/: CornerDatabaseGoal.cpp  CornerDatabaseGoal.h  EdgeDatabaseGoal.cpp  EdgeDatabaseGoal.h  EdgePermutationDatabaseGoal.cpp  EdgePermutationDatabaseGoal.h  GoalG1_CornerDatabase.cpp  GoalG1_CornerDatabase.h  OrientationDatabaseGoal.cpp  OrientationDatabaseGoal.h
Model/MoveStore/: CubeMoveStore.cpp  CubeMoveStore.h  CubeRotationStore.cpp  CubeRotationStore.h  CubeTwistStore.cpp  CubeTwistStore.h  G1TwistStore.cpp  G1TwistStore.h  G2TwistStore.cpp  G2TwistStore.h  G3TwistStore.cpp  G3TwistStore.h  ModelG1TwistStore.cpp  ModelG1TwistStore.h  ModelG2TwistStore.cpp  ModelG2TwistStore.h  ModelG3TwistStore.cpp  ModelG3TwistStore.h  ModelMoveStore.cpp  ModelMoveStore.h  ModelRotationStore.cpp  ModelRotationStore.h  ModelTwistStore.cpp  ModelTwistStore.h  MoveStore.cpp  MoveStore.h  RotationStore.cpp  RotationStore.h  TwistStore.cpp  TwistStore.h
Model/PatternDatabase/: CombinationIndexer.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  EdgeG1PatternDatabase.cpp  EdgeG1PatternDatabase.h  EdgeG2PatternDatabase.cpp  EdgeG2PatternDatabase.h  EdgePatternDatabase.cpp  EdgePatternDatabase.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  TestPatternDatabase.cpp  TestPatternDatabase.h  UnorderedPairSetIndexer.h
Model/Permutation/: CornerPermutation.cpp  CornerPermutation.h
Model/WorldObject/: Cubie.cpp  Cubie.h  RubiksCube.cpp  RubiksCube.h  RubiksCubeWorldObject.cpp  RubiksCubeWorldObject.h
OpenGLSeed/Model/: Camera.h  Iterator.cpp  MatrixStack.cpp  Orbiter.h  Rotator.h  World.h
OpenGLSeed/Util/: GLException.h  VectorHelper.cpp
OpenGLSeed/View/: WorldWindow.cpp
Shaders/: Material.h  noise3D.h  rubiksCube.frag
Util/: AutoTimer.cpp  CornerPermutationIndexer.cpp  CornerPermutationIndexer.h  EdgePermutationIndexer.cpp  EdgePermutationIndexer.h  Iterator.h  NibbleArray.cpp  NibbleArray.h  Random.cpp  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  math.cpp  math.h
View/: ChromosomeView.cpp  ChromosomeView.h  PopulationView.h  RubiksCubeView.cpp  RubiksCubeView.h
branches/RubiksCube_GL/: CMakeLists.txt  rubiksCube.cpp
branches/RubiksCube_GL/Controller/: RubiksCubeController.cpp  RubiksCubeController.h
branches/RubiksCube_GL/Controller/Command/: CubeMover.cpp
branches/RubiksCube_GL/Controller/GL/Program/: RubiksCubeProgram.cpp
branches/RubiksCube_GL/Model/: RubiksCubeWorld.cpp
branches/RubiksCube_GL/Model/WorldObject/: CubeAnimation.cpp  Cubie.cpp  Cubie.h  RubiksCube.cpp  RubiksCube.h
branches/RubiksCube_GL/OpenGLSeed/Controller/Command/: Mover.cpp  Renderer.cpp  ViewManager.cpp  ViewManager.h
branches/RubiksCube_GL/OpenGLSeed/Model/: Camera.cpp  Orbiter.cpp  World.cpp
branches/RubiksCube_GL/OpenGLSeed/Model/Material/: Chrome.cpp  GrayPlastic.cpp
branches/RubiksCube_GL/OpenGLSeed/Model/WorldObject/: Sphere.h  Torus.cpp  Triangle.cpp
branches/RubiksCube_GL/OpenGLSeed/Util/: VectorHelper.h
branches/RubiksCube_GL/Shaders/: ADS.frag  ADS.vert  DistanceLight.h  rubiksCube.frag  rubiksCube.vert
branches/bitboard/: CMakeLists.txt  TODO  rubiksCube.cpp
tags/1_GA/: TODO
tags/3_2Goals_AllRotations/: rubiksCube.cpp
trunk/: CMakeLists.txt
trunk/Controller/: CubeSearcher.cpp  CubeSearcher.h  GASolver.cpp  GASolver.h  RubiksCubeController.cpp  RubiksCubeController.h  RubiksCubeEvaluator.cpp  RubiksCubeEvaluator.h  Scrambler.cpp
trunk/Model/: CubieHasher.cpp  MoveStore.cpp  RubiksCube.cpp  RubiksCube.h  RubiksCubeModel.cpp  RubiksCubeModel.h
trunk/OpenGLSeed/: CMakeLists.txt
trunk/OpenGLSeed/Model/Light/: DistanceLight.cpp
trunk/OpenGLSeed/Model/Material/: Brass.h  GrayPlastic.h  Pearl.h
trunk/OpenGLSeed/Util/: Observer.h
trunk/OpenGLSeed/cmake/modules/: FindGLFW.cmake  FindGLM.cmake
trunk/Shaders/: version.h
trunk/Util/: AutoTimer.h  Random.cpp
trunk/View/: ChromosomeView.h  RubiksCubeView.cpp
(+216 files in other folders)
